--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,9 @@
 autopep8==1.3.2
 certifi==2017.7.27.1
 chardet==3.0.4
-colorama==0.3.9
-decorator==4.1.2
-guildwars2api==0.7.1
+gw2api==1.1.4
 idna==2.5
-ipython==6.1.0
-ipython-genutils==0.2.0
-jedi==0.10.2
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
 pycodestyle==2.3.1
-Pygments==2.2.0
-pyreadline==2.1
 requests==2.18.3
-simplegeneric==0.8.1
 six==1.10.0
-traitlets==4.3.2
 urllib3==1.22
-wcwidth==0.1.7
